tests/typechecker/should_pass/module_instances_3.csp
datatype X = Y.{1..3}

module M(this)

exports

channel c : X

endmodule

instance M1 = M({})
