tests/typechecker/should_fail/ambiguous_module_channel.csp
module M(X)
channel c : X
exports
endmodule

instance N = M({})
